Fix chord row breaks on desktop

--- a/style.css
+++ b/style.css
@@ -434,6 +434,19 @@ button:hover {
 .chord-status-grid > div {
   margin: 4px;
 }
+
+/* line break elements for desktop layout */
+.chord-row-break {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .chord-row-break {
+    display: block;
+    flex-basis: 100%;
+    height: 0;
+  }
+}
 .app-header {
   position: fixed;
   top: 0;
